<resources>
    <string name="app_name">Innovative Password Manager</string>
    <string name="manage_data">Manage Data</string>
    <string name="edit_master_password">Edit Master Password</string>
    <string name="blacklist">Blacklist</string>

    //TODO: delete/rewrite unused things here, maybe all of 'em
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string-array name="dest">
        <item>Email</item>
        <item>Telegram</item>
        <item>FTP</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password:</string>
    <string name="login">Login</string>
    <string name="enter_login">Enter Login:</string>
    <string name="generate_random_password">Generate Random Password</string>
    <string name="add_description">Add description:</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="add_entry">Add Entry</string>
    <string name="change_master_password">Change Master Password</string>
    <string name="entry_icon">Entry Icon</string>
    <string name="welcome_to_ipm"></string>
    <string name="application_name_short">IPM</string>
    <string name="application_name">Innovative Password Manager</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_entry">Edit Entry</string>
    <string name="select_applet">Select Applet</string>
    <string name="dump_all_data">Dump all data</string>
    <string name="delete_all_data">Delete all data</string>
    <string name="type_master_password">Type master-password</string>
    <string name="i_know_what_i_m_doing">I know what I\'m doing</string>
    <string name="master_password_data_delete">Master-Password</string>
    <string name="send">Send</string>
    <string name="delete_all_your_stored_data">Delete all your stored data</string>
    <string name="dump_all_your_stored_data">Dump all your stored data</string>
    <string name="ftp">FTP</string>
    <string name="email">Email</string>
    <string name="telegram">Telegram</string>
    <string name="json">JSON</string>
    <string name="csv">CSV</string>
    <string name="service">Service:</string>
    <string name="format">Format:</string>
    <string name="destination">Destination:</string>
    <string name="address">Address</string>
    <string name="repeat_new_master_password">Repeat New Master-Password</string>
    <string name="new_master_password">New Master-Password</string>
    <string name="save">Save</string>
    <string name="save_as_file">Save as File</string>
    <string name="welcome_label"><![CDATA[Welcome to<br><span><Big><b>Innovative</b></Big></span><br>Password Manager]]></string>
    <string name="sign_up_message"><![CDATA[Haven\'t got account? <b>Sign up</b>]]></string>
    <string name="empty_entity_list_message"><![CDATA[<big><it>Nothing here yet<br>Click </it><b>+</b><it> to add new entry</it></big>]]></string>
    <string name="title_activity_register_account">Sign up</string>
    <string name="save_edit">Save</string>
    <string name="login_register">Login</string>
    <string name="pass_register">Password</string>
    <string name="register_account">Register Account</string>
    <string name="icon">Icon</string>
    <string name="applet_download_link">Applet Download Link</string>
    <string name="link_copied">Link copied to clipboard</string>
    <string name="applet_link">https://github.com/BorisAnimal/dj_serv</string>
    <string name="manage_select_text">In case you need to extract all your data with stored Authentication Entries, you can easily choose service and destination. Or just save to device.</string>
    <string name="wipe_select_text">If you want to quickly wipe all your data leaving no traces in the system, use this option:</string>
</resources>
